force-app/main/default/objects/Activity/fields/truly_target__c.field-meta.xml
<CustomField>
    <fullName>truly_target__c</fullName>
    <label>Target</label>
    <length>250</length>
    <type>Text</type>
</CustomField>