force-app/main/default/objects/Activity/fields/truly_timeInQueue__c.field-meta.xml
<CustomField>
    <fullName>truly_timeInQueue__c</fullName>
    <label>Time in Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>