force-app/main/default/objects/Activity/fields/truly_timeToPickup__c.field-meta.xml
<CustomField>
    <fullName>truly_timeToPickup__c</fullName>
    <label>Time To Pickup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>