force-app/main/default/objects/Activity/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <description>Designed to support the scenario in which we were creating Tasks for all of the actions we needed the partner to take during the lending process. Since we have moved over to a separate object, Partner_Task__c, this field can be retired.</description>
    <externalId>true</externalId>
    <label>Unique ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>