force-app/main/default/objects/Activity/listViews/Internal_Users1.listView-meta.xml
<ListView>
    <fullName>Internal_Users1</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        
            <field>ACTIVITY.TASK</field>
        
            <operation>equals</operation>
        
            <value>1</value>
        
        </filters>
    <filters>
        
            <field>TASK.SUBJECT</field>
        
            <operation>equals</operation>
        
            <value>True</value>
        
        </filters>
    <label>Internal Users</label>
    <sharedTo>
        
            <allInternalUsers/>
        
        </sharedTo>
</ListView>